--- a/package.json
+++ b/package.json
@@ -4,11 +4,11 @@
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.6",
-    "@testing-library/react": "^11.2.2",
     "@testing-library/user-event": "^12.5.0",
     "query-string": "^6.13.7",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-number-format": "^4.4.4",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
     "web-vitals": "^0.2.4"
@@ -38,6 +38,10 @@
     ]
   },
   "devDependencies": {
+    "@babel/preset-react": "^7.12.13",
+    "@stryker-mutator/core": "^4.5.0",
+    "@stryker-mutator/jest-runner": "^4.5.0",
+    "@testing-library/react": "^11.2.5",
     "@wojtekmaj/enzyme-adapter-react-17": "^0.3.2",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.5",
